feat: Migrate backend logging system to advanced structured logger
## Migration Complète du Système de Logging Backend

### 🚀 Nouveau Logger Avancé
- ✅ Logger structuré avec emojis, couleurs et horodatage
- ✅ Masquage automatique des données sensibles (passwords, tokens, secrets)
- ✅ Support de différents niveaux de log (DEBUG, INFO, WARN, ERROR)
- ✅ Formatage JSON pour l'intégration avec des systèmes de monitoring

### 🔄 Migration Complète des Imports
- ✅ Migration de tous les controllers (Auth, Entry, User, Group)
- ✅ Migration de tous les services (JWT, TOTP, GroupCrypto, Auth)
- ✅ Migration de tous les middlewares (auth, errorHandler, monitoring)
- ✅ Migration des routes (entries, audit)
- ✅ Migration de la configuration database

### 🐳 Amélioration Docker
- ✅ Dockerfile optimisé avec toutes les dépendances dev/prod
- ✅ Installation des outils globaux (tsx, typescript, ts-node, nodemon)
- ✅ Build validé en environnement Docker

### 🧪 Tests et Validation
- ✅ Scripts de test automatisés pour la migration (Phase 3)
- ✅ Validation Docker des logs colorés et structurés
- ✅ Test du masquage des données sensibles
- ✅ Nettoyage des anciens scripts de test obsolètes

### 📊 Rapports Générés
- ✅ BACKEND_ANALYSIS.md (audit complet du backend)
- ✅ PHASE3_MIGRATION_LOGGER_REPORT.md (rapport de migration)

### 🛡️ Sécurité et Validation
- ✅ Utilitaires de validation (UUID, base64, types)
- ✅ Masquage automatique des mots de passe et tokens
- ✅ Logging structuré pour audit de sécurité

### 🧹 Nettoyage
- ✅ Suppression des anciens scripts de test (Phase 1-5)
- ✅ Suppression des fichiers obsolètes (LICENSE, tests crypto)
- ✅ Renommage de l'ancien logger (logger_old.ts)

Files changed:
- backend/Dockerfile (optimisation dépendances)
- backend/src/utils/logger.ts (nouveau logger avancé)
- backend/src/utils/logger_old.ts (ancien logger sauvegardé)
- backend/src/utils/validation.ts (nouveau utilitaire)
- backend/src/controllers/* (migration imports logger)
- backend/src/services/* (mig

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -29,7 +29,10 @@ FROM base AS development
 ENV NODE_ENV=development
 
 # Installation de toutes les dépendances (dev incluses)
-RUN npm install
+RUN npm install --include=dev
+
+# Installation globale des outils de développement
+RUN npm install -g tsx typescript ts-node nodemon
 
 # Copie du code source
 COPY . .
@@ -44,14 +47,17 @@ CMD ["npm", "run", "dev"]
 FROM base AS build
 ENV NODE_ENV=production
 
-# Installation des dépendances de production
-RUN npm install --only=production && npm cache clean --force
+# Installation de toutes les dépendances pour le build
+RUN npm install --include=dev
 
 # Copie du code source
 COPY . .
 
 # Compilation TypeScript
 RUN npm run build
+
+# Installation des dépendances de production uniquement
+RUN npm ci --only=production && npm cache clean --force
 
 # Stage de production
 FROM node:20-alpine AS production
